RESOLVED FIXED314888
REGRESSION(310826@main): "Zhuyin - Traditional" input method stalls for multiple seconds when composing a mail
https://bugs.webkit.org/show_bug.cgi?id=314888
Summary REGRESSION(310826@main): "Zhuyin - Traditional" input method stalls for multi...
Ryosuke Niwa
Reported 2026-05-15 03:09:12 PDT
Rapidly typing in Zhuyin can cause a stall for multiple seconds.
Attachments
Ryosuke Niwa
Comment 1 2026-05-15 03:10:07 PDT
Ryosuke Niwa
Comment 2 2026-05-15 03:32:55 PDT
EWS
Comment 3 2026-05-15 15:21:45 PDT
Committed 313336@main (2b952923a66c): <https://commits.webkit.org/313336@main> Reviewed commits have been landed. Closing PR #64986 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.